# proxy-pattern

./: .gitignore  CMakeLists.txt  main.cpp  subject.cpp  subject.h  test.cpp
.github/workflows/: ci.yml
